public/css/main.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : 18 апр. 2020 г., 17:07:02
    Author     : igorb
*/

body{
    margin-top: 40px;
}

.question-edit-container{
    border: 2px solid #ced4da;
    border-radius: 5px;
    padding: 20px;
    margin-bottom: 20px;
}

.question-edit-title-container{
    display: flex;
    justify-content: space-between;
}
.delete-answer{
    margin: 10px 0px 10px 10px;
    color: #dc3545;
}
.add-question-btn{
    margin: 20px 0 20px calc(50% - 96px);
}
.add-answer-btn{
    width: 38px;
    height: 38px;
    padding: 7px 7px 7px 12px;
    border-radius: 5px;
    margin-left: calc(50% - 19px);
}
.question-main-buttons-container{
    display: flex;
    justify-content: flex-end;
}

.disabled-container {
    pointer-events: none;
    opacity: 0.4;
}
.questions-container{

}

.t-answer-item{
    display: flex;
    padding: 10px;
    border: 1px solid blue;
    margin-bottom: 5px;
    align-items: center;
    font-size: 22px;
}
.t-answer-item:hover{
    background-color: aliceblue;
    cursor: pointer;
}

.t-question-test-container{
    margin-top: 20px;
}

@media (min-width: 992px) {
    .container {
        max-width: 660px;
    }
}


.results-preview-container{
    display: flex;
    align-items: baseline;
    margin: 40px 0;
}

